--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ section {
 }
 
 .title {
-  font-size: 35px;
+  font-size: 30px;
   margin-bottom: 35px;
 }
 
@@ -161,4 +161,142 @@ section {
   bottom: 20px;
 }
 
+/* animation */
+.wrapper {
+  display: none;
+}
 
+/* Desktop */
+@media screen and (min-width: 960px) {
+  
+  main {
+    position: absolute;
+    z-index: -5;
+    background: url("./assets/background-image-desktop.png") no-repeat center center;
+    background-size: cover;
+  }
+
+  section {
+    width: 500px;
+    height: 450px;
+    padding: 50px 30px;
+  }
+
+  .title {
+    font-size: 40px;
+  }
+  
+  #number-input {
+    width: 280px;
+  }
+  
+  #number-input::placeholder {
+    font-size: 14px;
+  }
+
+  .btn {
+    width: 135px;
+  }
+  
+  .btn-box {
+    margin-bottom: 30px;
+  }
+  
+  .result {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .chance {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .sukyungdev {
+    position: fixed;
+    font-size: 12px;
+    right: 20px;
+    bottom: 20px;
+  }
+
+  /* animation */
+
+  .wrapper {
+    display:block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+  }
+
+  .box div {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border: 6px solid rgba(214, 125, 252, 0.8);
+  }
+
+  .box div:nth-child(1) {
+    top: 12%;
+    left: 42%;
+    animation: animate 10s linear infinite;
+  }
+  
+  .box div:nth-child(2) {
+    top: 70%;
+    left: 50%;
+    animation: animate 7s linear infinite;
+  }
+  
+  .box div:nth-child(3) {
+    top: 17%;
+    left: 6%;
+    animation: animate 9s linear infinite;
+  }
+  
+  .box div:nth-child(4) {
+    top: 20%;
+    left: 60%;
+    animation: animate 10s linear infinite;
+  }
+  
+  .box div:nth-child(5) {
+    top: 67%;
+    left: 10%;
+    animation: animate 6s linear infinite;
+  }
+  
+  .box div:nth-child(6) {
+    top: 80%;
+    left: 70%;
+    animation: animate 12s linear infinite;
+  }
+  
+  .box div:nth-child(7) {
+    top: 60%;
+    left: 80%;
+    animation: animate 15s linear infinite;
+  }
+  
+  .box div:nth-child(8) {
+    top: 32%;
+    left: 25%;
+    animation: animate 16s linear infinite;
+  }
+  
+
+}
+
+
+@keyframes animate {
+  0%{
+    transform: scale(0) translateY(0) rotate(0);
+    opacity: 1;
+  }
+
+  100%{
+    transform: scale(1.3) translateY(-90px) rotate(360deg);
+    opacity: 0;
+  }
+  
+}
