--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ section {
     width: 60px;
     height: 60px;
     border: 6px solid rgba(214, 125, 252, 0.8);
+    border-radius: 50%;
   }
 
   .box div:nth-child(1) {
@@ -249,8 +250,8 @@ section {
   }
   
   .box div:nth-child(3) {
-    top: 17%;
-    left: 6%;
+    top: 60%;
+    left: 10%;
     animation: animate 9s linear infinite;
   }
   
@@ -262,7 +263,7 @@ section {
   
   .box div:nth-child(5) {
     top: 67%;
-    left: 10%;
+    left: 90%;
     animation: animate 6s linear infinite;
   }
   
@@ -271,31 +272,18 @@ section {
     left: 70%;
     animation: animate 12s linear infinite;
   }
-  
-  .box div:nth-child(7) {
-    top: 60%;
-    left: 80%;
-    animation: animate 15s linear infinite;
-  }
-  
-  .box div:nth-child(8) {
-    top: 32%;
-    left: 25%;
-    animation: animate 16s linear infinite;
-  }
-  
 
 }
 
 
 @keyframes animate {
   0%{
-    transform: scale(0) translateY(0) rotate(0);
+    transform: scale(0) translateY(0);
     opacity: 1;
   }
 
   100%{
-    transform: scale(1.3) translateY(-90px) rotate(360deg);
+    transform: scale(1.5) translateY(-90px);
     opacity: 0;
   }
   
